Closed
Bug 519855
Opened 16 years ago
Closed 16 years ago
Add Google Desktop's injected bundle to the list of problematic add-ons
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
Camino2.0
People
(Reporter: alqahira, Assigned: stuart.morgan+bugzilla)
Details
(Whiteboard: [camino-2.0])
Attachments
(1 file)
|
1.48 KB,
patch
|
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
[12:15pm] smorgan: I can probably add GD to the warning messages on startup
[12:15pm] smorgan: I'll look at doing that
| Assignee | ||
Updated•16 years ago
|
Summary: Add Google Desktop's InputManager to the list of problematic add-ons → Add Google Desktop's injected bundle to the list of problematic add-ons
| Assignee | ||
Comment 1•16 years ago
|
||
Untested, since a full install/uninstall cycle is kind of a pain, but should work.
Attachment #404183 -
Flags: superreview?(mikepinkerton)
Comment 2•16 years ago
|
||
Comment on attachment 404183 [details] [diff] [review]
add GD to list
sr=pink
so sad :(
Attachment #404183 -
Flags: superreview?(mikepinkerton) → superreview+
| Assignee | ||
Comment 3•16 years ago
|
||
Landed on CVS trunk and CAMINO_2_0_BRANCH.
For posterity, this was because of the nsNativeThemeCocoa::DrawPushButton crashes that the GD intercept library triggers.
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Whiteboard: [camino-2.0]
| Reporter | ||
Comment 4•16 years ago
|
||
Either this isn't triggering the notification or our beloved users aren't reading :-( This is currently the #2 crash for 2.0 (but only lagging Flash by 1).
You need to log in
before you can comment on or make changes to this bug.
Description
•