Camino only - Bug 519855: Add Google Desktop to the list of add-ons that trigger warnings. sr=pink